erDiagram
    Users {
        int id PK
        string username
        string password_hash
        string role
        datetime created_at
        datetime last_login_at
        datetime expiration_date
        boolean is_active
        boolean can_access_all_files
        boolean can_download
        boolean can_upload
        boolean can_edit
        boolean can_delete
        boolean is_deleted
        datetime deleted_at
        boolean has_upload_limits
        int upload_limit
    }

    Files {
        int id PK
        string name
        string internal_path
        int size_bytes
        string mime_type
        int uploaded_by FK
        datetime uploaded_at
        boolean is_deleted
        datetime deleted_at
    }

    FilePermissions {
        int id PK
        int file_id FK
        int user_id FK
        boolean can_view
        boolean can_download
        boolean can_edit
        boolean can_delete
        datetime granted_at
        int granted_by FK
    }

    AuditLog {
        int id PK
        datetime timestamp
        int user_id FK
        string event_type
        string description
        string ip_address
        int file_id FK
        boolean success
    }

    Users ||--o{ Files : uploaded_by
    Users ||--o{ FilePermissions : user_id
    Users ||--o{ FilePermissions : granted_by
    Users ||--o{ AuditLog : user_id
    Files ||--o{ FilePermissions : file_id
    Files ||--o{ AuditLog : file_id
